# auto_reports

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  auto_reports.py  common.py  data_process.py  hindcast_report.py  plots.py  pyproject.toml  regional_dashboard.py  storms_dashboard.py
.github/workflows/: run_tests.yaml  test.yaml
auto_reports/: _io.py  _markdown.py  _proj.py  _render.py  _stats.py  _storms.py  _tide.py  common.py  data_process.py  reports.py
auto_reports/graphs/: histograms.py  maps.py  progress.py  scatter.py  taylor.py  tidal_plots.py  ts.py
dashboards/: regional_dashboard.py  storms_dashboard.py  tidal_dashboard.py
data_demo/models/seareport-v0.2.3/: benc.parquet  cuxh.parquet  cwfl.parquet  guam.parquet  kusm.parquet  malo.parquet  naha.parquet
data_demo/models/stofs2d/: benc.parquet  cuxh.parquet  cwfl.parquet  guam.parquet  kusm.parquet  malo.parquet  naha.parquet
data_demo/obs/: guam_wls.parquet  malo_flt.parquet
requirements/: requirements-dev.txt  requirements.txt
tests/: model_skill_test.py  regional_app_test.py  storm_app_test.py  storm_report_test.py
