[tool.poetry]
name = "auto-reports"
version = "0.1.0"
description = ""
authors = ["tomsail <saillour.thomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
searvey = { git = "https://github.com/oceanmodeling/searvey.git", branch = "dev" }
analysea = { git = "https://github.com/seareport/analysea.git",  branch = "tide-chunk" }
pyposeidon = { git = "https://github.com/ec-jrc/pyPoseidon.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
