[project]
name = "auto-reports"
version = "0.1.0"
description = ""
authors = [
    {name = "tomsail",email = "saillour.thomas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "xarray (>=2025.3.1,<2026.0.0)",
    "seastats @ git+https://github.com/oceanmodeling/seastats.git",
    "hvplot (>=0.11.2,<0.12.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "holoviews (>=1.20.2,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
    "shapely (>=2.1.0,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "seareport-data (>=0.2.4,<0.3.0)",
    "geoviews (>=1.14.0,<2.0.0)",
    "pytest-playwright (>=0.7.0,<0.8.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "jupyter-bokeh (>=4.0.5,<5.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipympl = "^0.9.7"
